# poc-backend

./: .env.example  .gitignore  ARCHITECTURE.md  BUILD_MILESTONES.md  POC_BUILD_PLAN.md  README.md  pyproject.toml
app/: claude_loop.py  config.py  logging_setup.py  main.py  prompts.py  retrieval.py  schemas.py  tools.py
sops/: sop-account-003.md  sop-billing-002.md  sop-general-005.md  sop-refund-001.md  sop-shipping-004.md
tests/: test_health.py  test_tools_schema.py  test_triage_smoke.py
